fix responsive layout issue when switching from home to todo assistant

--- a/src/components/Base/Base.css
+++ b/src/components/Base/Base.css
@@ -61,7 +61,6 @@
     width: 100%;
     height: 100%;
     gap: 2rem;
-    padding: 3rem 1rem 3rem 1rem;
     /* margin-top: 2rem;
     margin-bottom: 2rem; */
 }
@@ -121,6 +120,7 @@
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(5px);
     order: 1;
+    padding: 3.5rem 1rem 3.5rem 1rem;
 }
 
 @media only screen and (max-width: 800px) {
